server/src/languages/tolk/tree-sitter-tolk/test/corpus/op-priority.test.txt
========================================================================
Operators precedence 1
========================================================================
const a = 1 + 2 * !3 << 4;
------------------------------------------------------------------------

(source_file
  (constant_declaration
    name: (identifier)
    value: (binary_operator
      (binary_operator
        (number_literal)
        (binary_operator
          (number_literal)
          (unary_operator
            argument: (number_literal))))
      (number_literal))))

========================================================================
Null coalescing operator ??
========================================================================
fun test() {
    val x = a ?? b;
    val y = a ?? b ?? c;
    val z = a ?? b + c;
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block_statement
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (binary_operator
          (identifier)
          (identifier)))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (binary_operator
          (identifier)
          (binary_operator
            (identifier)
            (identifier))))
      (local_vars_declaration
        lhs: (var_declaration
          name: (identifier))
        assigned_val: (binary_operator
          (identifier)
          (binary_operator
            (identifier)
            (identifier)))))))
